...
        android:orientation="vertical">

        <!--Use material components design for the text boxes -->

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Login Button, Forgot password button and Register for a new user signup-->
...
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/forgot_pass_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:text="@string/forget_password"
                android:textColor="#fff"
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".02" />


            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:onClick="loginUser"
                android:text="@string/login"
...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/player_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/player_register_btn" />
        </LinearLayout>

...
