...
    <string name="sign_up_here"><i>Sign up here...</i></string>
    <string name="login_to_continue"> <i>Log in to continue...</i></string>
    <string name="welcome_message">Welcome To Concussion Checker</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="new_user_reg_here">New User? Register Here</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Password</string>
    <string name="reg_required_fields"><i>* Required Fields</i></string>
    <string name="btn_login">Login</string>

    <!--Hints -->
    <string name="name_hint">Full Name *</string>
    <string name="email_hint">Email *</string>
...
